--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 
 /* FOR BACKGROUND IMAGE */
 .bg {
-  background: url(../img/bg.png);
+  background: url(img/bg.png);
   /* background: rgba(204, 13, 13, 0.582) url(../img/bg.png); */
   height: ;
   max-height: 100%;
