--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
 
 /* FOR BACKGROUND IMAGE */
 .bg {
-  background: url(../img/bg.png);
+  background: url(img/bg.png);
   /* background: rgba(204, 13, 13, 0.582) url(../img/bg.png); */
   max-height: 100%;
   /* min-height: calc(100vh - 4rem - 1.3rem ) ; */
